Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68166

Windows: Startup crash of qlalr in static builds

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.0
    • 5.11.0 Beta 4
    • Build tools: Other
    • None
    • Windows 10 64bit, MSVC0217 64bit
    • 1b7337d23dbc767ba482d9051180f10d77052913 (qtbase/5.11, 8.5.2018, 5.11)

      while compiling qtremoteobjects:

      0000005e`abd5f518 00007ff9`61b1ebdf ntdll!RtlpBreakPointHeap+0x16
      0000005e`abd5f520 00007ff9`61ad0315 ntdll!RtlpValidateHeapEntry+0x4e797
      0000005e`abd5f550 00007ff9`5e15483a ntdll!RtlValidateHeap+0x95
      0000005e`abd5f5a0 00007ff9`2a921501 KERNELBASE!HeapValidate+0xa
      0000005e`abd5f5d0 00007ff9`2a9209b2 ucrtbased!_CrtIsValidHeapPointer(void * block = 0x00007ff6`4fd98170)+0x31 [minkernel\crts\ucrt\src\appcrt\heap\debug_heap.cpp @ 1407]
      0000005e`abd5f600 00007ff9`2a923149 ucrtbased!realloc_dbg_nolock(void * block = 0x00007ff6`4fd98170, unsigned int64 * new_size = 0x0000005e`abd5f6d8, int block_use = 0n1, char * file_name = 0x00000000`00000000 "", int line_number = 0n0, bool reallocation_is_allowed = true)+0x2b2 [minkernel\crts\ucrt\src\appcrt\heap\debug_heap.cpp @ 604]
      0000005e`abd5f6a0 00007ff9`2a923d5e ucrtbased!_realloc_dbg(void * block = 0x00007ff6`4fd98170, unsigned int64 requested_size = 0x20, int block_use = 0n1, char * file_name = 0x00000000`00000000 "", int line_number = 0n0)+0x59 [minkernel\crts\ucrt\src\appcrt\heap\debug_heap.cpp @ 758]
      0000005e`abd5f6f0 00007ff6`4f5e1f62 ucrtbased!realloc(void * block = 0x00007ff6`4fd98170, unsigned int64 size = 0x20)+0x2e [minkernel\crts\ucrt\src\appcrt\heap\realloc.cpp @ 41]
      0000005e`abd5f730 00007ff6`4f5e2306 qlalr!QListData::realloc_grow(int growth = 0n1)+0xc2 [c:\dev\5-vs17-511s\qt-511s\qtbase\src\corelib\tools\qlist.cpp @ 153]
      0000005e`abd5f7b0 00007ff6`4f653411 qlalr!QListData::prepend(void)+0x86 [c:\dev\5-vs17-511s\qt-511s\qtbase\src\corelib\tools\qlist.cpp @ 205]
      0000005e`abd5f800 00007ff6`4f64d5b2 qlalr!QList<QTextCodec * __ptr64>::prepend(class QTextCodec ** t = 0x0000005e`abd5f888)+0xb1 [c:\dev\5-vs17-511s\qt-511s\qtbase\src\corelib\tools\qlist.h @ 636]
      0000005e`abd5f860 00007ff6`4f64f773 qlalr!QTextCodec::QTextCodec(void)+0x82 [c:\dev\5-vs17-511s\qt-511s\qtbase\src\corelib\codecs\qtextcodec.cpp @ 483]
      0000005e`abd5f8b0 00007ff6`4f64ddab qlalr!QTsciiCodec::QTsciiCodec(void)+0x13
      0000005e`abd5f8e0 00007ff6`4f64e507 qlalr!setup(void)+0x4b [c:\dev\5-vs17-511s\qt-511s\qtbase\src\corelib\codecs\qtextcodec.cpp @ 272]
      0000005e`abd5fb50 00007ff6`4f64c8bd qlalr!setupLocaleMapper(void)+0x57 [c:\dev\5-vs17-511s\qt-511s\qtbase\src\corelib\codecs\qtextcodec.cpp @ 164]
      0000005e`abd5fba0 00007ff6`4f5d55f8 qlalr!QTextCodec::codecForLocale(void)+0x3d [c:\dev\5-vs17-511s\qt-511s\qtbase\src\corelib\codecs\qtextcodec.cpp @ 698]
      0000005e`abd5fbe0 00007ff6`4f5d540b qlalr!QTextStreamPrivate::reset(void)+0x98 [c:\dev\5-vs17-511s\qt-511s\qtbase\src\corelib\serialization\qtextstream.cpp @ 405]
      0000005e`abd5fc30 00007ff6`4f5d12fa qlalr!QTextStreamPrivate::QTextStreamPrivate(class QTextStream * q_ptr = 0x00007ff6`4fd97da0)+0x16b [c:\dev\5-vs17-511s\qt-511s\qtbase\src\corelib\serialization\qtextstream.cpp @ 336]
      0000005e`abd5fcb0 00007ff6`4f512e14 qlalr!QTextStream::QTextStream(struct _iobuf * fileHandle = 0x00007ff9`2aa76ca0, class QFlags<enum QIODevice::OpenModeFlag> openMode = class QFlags<enum QIODevice::OpenModeFlag>)+0x5a [c:\dev\5-vs17-511s\qt-511s\qtbase\src\corelib\serialization\qtextstream.cpp @ 1132]
      0000005e`abd5fd40 00007ff9`2a940479 qlalr!`dynamic initializer for 'qerr''(void)+0x44 [c:\dev\5-vs17-511s\qt-511s\qtbase\src\tools\qlalr\lalr.cpp @ 43]
      0000005e`abd5fd90 00007ff6`4f9e41d9 ucrtbased!_initterm(<function> ** first = 0x00007ff6`4fa22000, <function> ** last = 0x00007ff6`4fa22948)+0x59 [minkernel\crts\ucrt\src\appcrt\startup\initterm.cpp @ 22]
      0000005e`abd5fdd0 00007ff6`4f9e413e qlalr!__scrt_common_main_seh(void)+0x89 [f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl @ 253]
      0000005e`abd5fe30 00007ff6`4f9e4419 qlalr!__scrt_common_main(void)+0xe [f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl @ 326]
      0000005e`abd5fe60 00007ff9`60ba3034 qlalr!mainCRTStartup(void)+0x9 [f:\dd\vctools\crt\vcstartup\src\startup\exe_main.cpp @ 17]
      0000005e`abd5fe90 00007ff9`61ad1551 KERNEL32!BaseThreadInitThunk+0x14
      0000005e`abd5fec0 00000000`00000000 ntdll!RtlUserThreadStart+0x21
      

      the global variables of QTextStream at src\tools\qlalr\lalr.cpp:43 cause a crash.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes